--- a/7 csr ssr/public/index.html
+++ b/7 csr ssr/public/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Document</title> 
+    <script src="jquery.js"></script>
 </head>
 <body>
-    <h1>testing this file.</h1>
+    <h4>we are on this page through new 'app.use('/',express.static(path.join(__dirname, 'public')))' ---- we generaly do not give address to 'app.use(express.static(path.join(__dirname, 'public')))'</h4>
+    <h1>CSR</h1>
+
+    <h4>TODO</h4>
+
+    <input type="text" id="inp" placeholder="Add you task here">
+    <button id="btn" type="submit">Add</button>
+
+    <ul id="list">
+        
+    </ul>
+
+
+    <script src="script.js"></script>
 </body>
 </html>
